[package]
name = "cedar-afl"
version = "0.1.0"
edition = "2021"

[dependencies]
afl = "*"
env_logger = "0.9.0"
log = "0.4"
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"
cedar-drt = { version = "4.0.0", path = "../" }
cedar-policy = { path = "../../cedar/cedar-policy", version = "4.*" }
cedar-policy-core = { path = "../../cedar/cedar-policy-core", version = "4.*", features = ["arbitrary"] }
cedar-policy-validator = { path = "../../cedar/cedar-policy-validator", version = "4.*", features = ["arbitrary"] }
cedar-policy-formatter = { path = "../../cedar/cedar-policy-formatter", version = "4.*" }
cedar-testing = { path = "../../cedar/cedar-testing", version = "4.*" }
cedar-policy-generators = { path = "../../cedar-policy-generators", version = "4.*" }
cedar-fuzz-lib = { path = "../fuzz-lib", version = "0.*" }
miette = "7.1.0"
smol_str = { version = "0.2", features = ["serde"] }
regex = "1"
rayon = { version = "1.5", optional = true }
rand = { version = "0.8", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
rand_chacha = { version = "0.3", optional = true }
similar-asserts = "1.5.0"
thiserror = "1.0.61"
arbitrary = "1.3.2"
uuid = "1.8.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "abac-type-directed"
path = "src/fuzz_targets/abac-type-directed.rs"
test = false
doc = false

[[bin]]
name = "eval-type-directed"
path = "src/fuzz_targets/eval-type-directed.rs"
test = false
doc = false

[[bin]]
name = "abac"
path = "src/fuzz_targets/abac.rs"
test = false
doc = false

# [[bin]]
# name = "schema-roundtrip"
# path = "src/fuzz_targets/schema-roundtrip.rs"
# test = false
# doc = false

[[bin]]
name = "rbac"
path = "src/fuzz_targets/rbac.rs"
test = false
doc = false

[[bin]]
name = "formatter"
path = "src/fuzz_targets/formatter.rs"
test = false
doc = false

[[bin]]
name = "convert-schema-human-to-json"
path = "src/fuzz_targets/convert-schema-human-to-json.rs"
test = false
doc = false
