[package]
name = "cedar-bolero"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"
cedar-drt = { version = "4.0.0", path = ".." }
cedar-policy = { path = "../../cedar/cedar-policy", version = "4.*" }
cedar-policy-core = { path = "../../cedar/cedar-policy-core", version = "4.*", features = ["arbitrary"] }
cedar-policy-validator = { path = "../../cedar/cedar-policy-validator", version = "4.*", features = ["arbitrary"] }
cedar-policy-formatter = { path = "../../cedar/cedar-policy-formatter", version = "4.*" }
cedar-testing = { path = "../../cedar/cedar-testing", version = "4.*" }
cedar-policy-generators = { path = "../../cedar-policy-generators", version = "4.*" }
miette = "7.1.0"
smol_str = { version = "0.2", features = ["serde"] }
regex = "1"
rayon = { version = "1.5", optional = true }
rand = { version = "0.8", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
rand_chacha = { version = "0.3", optional = true }
similar-asserts = "1.5.0"
thiserror = "1.0.61"
bolero = { version = "0.10.1", features = ["arbitrary"] }
bolero-generator = "0.10.2"
arbitrary = "1.3.2"
log = "0.4.21"

[dependencies.uuid]
version = "1.3.1"
features = ["v4", "fast-rng"]

[features]
log = ["dep:rand"]

[lib]
path = "src/lib.rs"

[[test]]
name = "abac_type_directed"
harness = false

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

